Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10395

ASSERTION( osd->od_oi_table != NULL && osd->od_oi_count >= 1 ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0, Lustre 2.12.6
    • Lustre 2.12.0, Lustre 2.13.0
    • None
    • 3
    • 9223372036854775807

      Just had this crash in my master-next testing:

       

       
      [271899.484182] Lustre: DEBUG MARKER: == replay-single test 26: |X| open(O_CREAT), unlink two, close one, replay, close one (test mds_cleanup_orphans) ====================================================================================================== 05:31:19 (1513333879)
      [271900.114927] Turning device loop0 (0x700000) read-only
      [271900.159562] Lustre: DEBUG MARKER: mds1 REPLAY BARRIER on lustre-MDT0000
      [271900.197289] Lustre: DEBUG MARKER: local REPLAY BARRIER on lustre-MDT0000
      [271900.868045] LustreError: 29112:0:(osd_internal.h:899:osd_fid2oi()) ASSERTION( osd->od_oi_table != NULL && osd->od_oi_count >= 1 ) failed: [0xa:0x8:0x0]
      [271900.870230] LustreError: 29112:0:(osd_internal.h:899:osd_fid2oi()) LBUG
      [271900.870897] Pid: 29112, comm: ll_mgs_0002
      [271900.871499] 
      Call Trace:
      [271900.874098]  [<ffffffffa02927ce>] libcfs_call_trace+0x4e/0x60 [libcfs]
      [271900.874904]  [<ffffffffa029285c>] lbug_with_loc+0x4c/0xb0 [libcfs]
      [271900.875989]  [<ffffffffa0bd5390>] __osd_oi_lookup+0x2e0/0x390 [osd_ldiskfs]
      [271900.876716]  [<ffffffffa0bd715a>] osd_oi_lookup+0xca/0x190 [osd_ldiskfs]
      [271900.877452]  [<ffffffffa0bd3112>] osd_fid_lookup+0x4a2/0x1b50 [osd_ldiskfs]
      [271900.878132]  [<ffffffff810e3224>] ? lockdep_init_map+0xc4/0x600
      [271900.902777]  [<ffffffffa0bd4821>] osd_object_init+0x61/0x180 [osd_ldiskfs]
      [271900.903535]  [<ffffffffa03d352f>] lu_object_alloc+0xdf/0x310 [obdclass]
      [271900.904230]  [<ffffffffa03d38cc>] lu_object_find_at+0x16c/0x290 [obdclass]
      [271900.904930]  [<ffffffffa03d4d88>] dt_locate_at+0x18/0xb0 [obdclass]
      [271900.905594]  [<ffffffffa0399140>] llog_osd_open+0x4f0/0xf80 [obdclass]
      [271900.906616]  [<ffffffffa038814a>] llog_open+0x13a/0x3b0 [obdclass]
      [271900.907360]  [<ffffffffa0647953>] llog_origin_handle_read_header+0x1b3/0x630 [ptlrpc]
      [271900.908617]  [<ffffffffa068da13>] tgt_llog_read_header+0x33/0xe0 [ptlrpc]
      [271900.909364]  [<ffffffffa069716b>] tgt_request_handle+0x93b/0x13e0 [ptlrpc]
      [271900.910077]  [<ffffffffa063c091>] ptlrpc_server_handle_request+0x261/0xaf0 [ptlrpc]
      [271900.911298]  [<ffffffffa063fe48>] ptlrpc_main+0xa58/0x1df0 [ptlrpc]
      [271900.911970]  [<ffffffff81706467>] ? _raw_spin_unlock_irq+0x27/0x50
      [271900.912646]  [<ffffffffa063f3f0>] ? ptlrpc_main+0x0/0x1df0 [ptlrpc]
      [271900.914668]  [<ffffffff810a2eba>] kthread+0xea/0xf0
      [271900.915359]  [<ffffffff810a2dd0>] ? kthread+0x0/0xf0
      [271900.915996]  [<ffffffff8170fb98>] ret_from_fork+0x58/0x90
      [271900.916627]  [<ffffffff810a2dd0>] ? kthread+0x0/0xf0
      [271900.917273] 
      [271900.917861] Kernel panic - not syncing: LBUG
      

      I have a crashdump.

            bzzz Alex Zhuravlev
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: